# mlops-theguardian-sentiment

./: .env.example  .gitignore  Jenkinsfile  Makefile  README.md  ____________________dock.yaml  docker-compose.yaml  pyproject.toml  requirements-jenkins.txt  requirements.txt  test.md
_CONF/prod/: Dockerfile
_CONF/staging/: Dockerfile  README.md  nginx.conf  requirements-torch.txt  requirements.txt  supervisord.conf
_server-airflow/: .env example  Dockerfile  README.md  docker-compose.yaml  requirements.txt
_server-airflow/config/: airflow.cfg
_server-airflow/dags/: dag_forecast.py  dag_infer.py  dag_monitor.py  dag_snapshot.py
_server-fastapi/: .dockerignore  Dockerfile  requirements-torch.txt  requirements.txt
_server-fastapi/src/: fastapi.py  route_admin.py  route_health.py  route_predict.py  route_reload_model.py  route_run.py  route_transactions.py  route_trend.py
_server-jenkins/: Dockerfile  docker-compose.yaml
_server-mlflow/: Dockerfile  create_schema.py  requirements.txt  start.sh
_server-nginx/: Dockerfile  README.txt  default.conf.template
_server-nginx/html/: index.html
_server-streamlit/: .dockerignore  Dockerfile  README.txt  requirements.txt
_server-streamlit/.streamlit/: config.toml
_server-streamlit/src/: dashboard.py
_server-streamlit/src/modules/: module_admin.py  module_login.py  module_predict.py  module_transactions.py  module_trend.py
_server-streamlit/src/tabs/: block_admin_drift_report.py  block_admin_inject-drift.py  block_admin_inject_drift.py  block_admin_purge.py  block_admin_rollback_drift.py  block_predict.py  block_predict_fetch_theguardian.py  block_predict_test.py  block_transactions_pendings.py  block_transactions_validate.py  block_trend_history.py  block_trend_latest.py
_workers/: fetch_worker.py  monitor_worker.py  prophet_worker.py  transformers_worker.py
docs/: presentation.md
docs/decisions/: adr.md
docs/diagrams/: flux_architecture.md  sequences.mmd  the_guardian_c4_c1.drawio  the_guardian_c4_c2.drawio
docs/insights/: sentiment_drift.md
notebooks/: 02_elt_init_db.ipynb  03_train.ipynb  03_train_prophet.ipynb  04_create_table_jobs.ipynb  05_create_table_monitor.ipynb
tests/: conftest.py
tests/_workers/: test_fetch_worker.py
(+12 files in other folders)
